<resources>
    <string name="app_name">Library Games</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_header">Library Games</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>

    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>

    <string name="title_favorite">Favorite</string>

    <string name="text_name_games">Name Games</string>
    <string name="text_rating">⭐ %s</string>
    <string name="text_released">Release date : %s</string>
    <string name="text_playtime">Playtime : %s hours</string>
</resources>