<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailGamesActivity">

    <ImageView
        android:id="@+id/iv_detail_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_games"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
        tools:text="@string/text_name_games"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/tv_games"
        app:layout_constraintTop_toTopOf="@id/tv_games"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/text_rating"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_release"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        tools:text="@string/text_released"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating"/>

    <TextView
        android:id="@+id/tv_playtime"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        tools:text="@string/text_playtime"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_release"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/menu_favorite"
        app:srcCompat="@drawable/ic_favorite_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>